BROKEN! Try to fix the tile lag issue after collapse…

--- a/ext/css/common.css
+++ b/ext/css/common.css
@@ -971,3 +971,11 @@ body.label{
     height:100%;
     width:100%;
 }
+
+.notransition {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -o-transition: none !important;
+  -ms-transition: none !important;
+  transition: none !important;
+}
